; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_buf.c_mlx5_bitmap_cleanup.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_buf.c_mlx5_bitmap_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_bitmap = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx5_bitmap*)* @mlx5_bitmap_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlx5_bitmap_cleanup(%struct.mlx5_bitmap* %0) #0 {
  %2 = alloca %struct.mlx5_bitmap*, align 8
  store %struct.mlx5_bitmap* %0, %struct.mlx5_bitmap** %2, align 8
  %3 = load %struct.mlx5_bitmap*, %struct.mlx5_bitmap** %2, align 8
  %4 = getelementptr inbounds %struct.mlx5_bitmap, %struct.mlx5_bitmap* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.mlx5_bitmap*, %struct.mlx5_bitmap** %2, align 8
  %9 = getelementptr inbounds %struct.mlx5_bitmap, %struct.mlx5_bitmap* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @free(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
